Fixed bug #20256 (snprintf() not defined)